# daq-system-infrastructure

./: .gitignore  CHANGELOG.md  README.md  compose-mongo.yml  compose.yml  initial-data-sources.conf  license.txt  pyproject.toml
conf/: mosquitto.conf
data/: README.md
db-migrations/: env.py  script.py.mako
db-migrations/versions/: v0_3_5_base.py
init-db/: create-multiple-databases.sh
scripts/db-migrations/: alembic.ini
scripts/init-db/: create-multiple-databases.sh
