[project]
name = "daq-system-infrastructure"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "dotenv>=0.9.9",
    "pip>=25.2",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy-utils>=0.42.0",
    "hololinked>=0.3.5"
]
